--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,7 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '8.x',
-    versionSpec: '10.x'
+    versionSpec: '8.x', '10.x'
   displayName: 'Install Node.js'
 
 - script: |
