update yml file to run on linux, mac and windows

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,22 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 jobs:
-- job: LinuxOrMacOS
+- job: Linux
   pool:
     vmImage: 'Ubuntu 16.04'
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '8.x'
+    displayName: 'Install Node.js'
+  - script: |
+      npm install
+      npm run build
+    displayName: 'npm install and build'
+
+- job: Mac
+  pool:
+    vmImage: 'macOS-10.13'
   steps:
   - task: NodeTool@0
     inputs:
