--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,8 @@ jobs:
   - script: |
       npm install
       npm run build
-    displayName: 'npm install and build'
+      npm run test
+    displayName: 'npm install build and test'
 
 - job: Mac
   pool:
@@ -28,7 +29,8 @@ jobs:
   - script: |
       npm install
       npm run build
-    displayName: 'npm install and build'
+      npm run test
+    displayName: 'npm install build and test'
 
 - job: Windows
   pool:
@@ -41,4 +43,5 @@ jobs:
   - script: |
       npm install
       npm run build
-    displayName: 'npm install and build'
+      npm run test
+    displayName: 'npm install build and test'
