--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "build": "webpack -p --mode production",
     "dev-server": "webpack-dev-server --mode development --https --key ./certs/server.key --cert ./certs/server.crt --cacert ./certs/ca.crt --port 8081 --hotOnly",
     "sideload": "office-toolbox sideload -m manifest.xml -a excel",
+    "test": "mocha -r esm test/**/*.js",
     "watch": "webpack -p --mode development --watch"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
+    "esm": "^3.0.84",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "mocha": "^5.2.0",
     "office-addin-node-debugger": "^0.1.0",
     "office-toolbox": "^0.1.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
